--- a/src/sharp/TerritoryData.Lib/TerritoryData.Lib.csproj
+++ b/src/sharp/TerritoryData.Lib/TerritoryData.Lib.csproj
@@ -6,4 +6,9 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="4.1.0" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
+  </ItemGroup>
+
 </Project>
