--- a/src/sharp/TerritoryData.Tests/TerritoryData.Tests.csproj
+++ b/src/sharp/TerritoryData.Tests/TerritoryData.Tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TerritoryData.Lib\TerritoryData.Lib.csproj" />
+    <ProjectReference Include="..\TerritoryData.Lib\Module.TerritoryData.Lib.csproj" />
   </ItemGroup>
 
 </Project>
