--- a/src/sharp/TerritoryData.Web/Module.TerritoryData.Web.csproj
+++ b/src/sharp/TerritoryData.Web/Module.TerritoryData.Web.csproj
@@ -8,8 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TerritoryData.Library\TerritoryData.Lib.csproj" />
-    <ProjectReference Include="..\TerritoryData.Lib\TerritoryData.Lib.csproj" />
+    <ProjectReference Include="..\TerritoryData.Lib\Module.TerritoryData.Lib.csproj" />
   </ItemGroup>
 
 </Project>
