- folders cleanup - web controller code

--- a/src/sharp/TerritoryData.Tests/TerritoryData.Tests.csproj
+++ b/src/sharp/TerritoryData.Tests/TerritoryData.Tests.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TerritoryData.Lib\Module.TerritoryData.Lib.csproj" />
+    <ProjectReference Include="..\TerritoryData.Lib\TerritoryData.Lib.csproj" />
   </ItemGroup>
 
 </Project>
